rimossi eventi e introdotti bean per shareTabelController + basic per rata

--- a/Jama/src/main/webapp/home.xhtml
+++ b/Jama/src/main/webapp/home.xhtml
@@ -15,7 +15,7 @@
 		<h:commandButton value="Crea Convenzione"
 			action="#{agreementManager.createAgreement()}" styleClass="buttons" />
 		<h:button value="Aggiungi Rata"
-			outcome="/resources/sections/installmentWiz" styleClass="buttons" />
+			outcome="/installmentWiz" styleClass="buttons" />
 		<h:button value="Lista convenzioni" outcome="agreementList"
 			styleClass="buttons" />
 	</h:form>
