--- a/Jama/src/main/webapp/resources/sections/installmentLastStep.xhtml
+++ b/Jama/src/main/webapp/resources/sections/installmentLastStep.xhtml
@@ -11,13 +11,13 @@
 				styleClass="grid">
 
 
-				<h:outputText value="#{msgs.shareTableCapitalBalance}:" />
+				<h:outputText value="Fine " />
 				<br />
 				<br />
 
 			</h:panelGrid>
 			
-			<p:commandButton value="#{msgs.save}" action="#{agreementManager.save()}" ajax="false"/>
+			<p:commandButton value="#{msgs.save}" action="#{installmentManager.save()}" ajax="false"/>
 			
 
 
