--- a/Jama/src/main/webapp/resources/sections/wizShareTable.xhtml
+++ b/Jama/src/main/webapp/resources/sections/wizShareTable.xhtml
@@ -25,7 +25,7 @@
 
 			<h:outputText value="#{msgs.shareTableCapitalBalance}:" />
 			<h:inputText id="atheneumCapitalBalance"
-				value="#{cc.attrs.bean.shareTableController.shareTable.atheneumCapitalBalance}"
+				value="#{cc.attrs.bean.shareTable.atheneumCapitalBalance}"
 				label="#{msgs.shareTableCapitalBalance}" required="true" disabled="#{cc.attrs.editingDisable}">
 				<f:ajax event="blur" execute="@this"
 					render="atheneumCapitalBalanceError  percentAtheneumCapitalBalance" />
@@ -43,7 +43,7 @@
 
 			<h:outputText value="#{msgs.shareTableCommonBalance}:" />
 			<h:inputText id="atheneumCommonBalance"
-				value="#{cc.attrs.bean.shareTableController.shareTable.atheneumCommonBalance}"
+				value="#{cc.attrs.bean.shareTable.atheneumCommonBalance}"
 				label="#{msgs.shareTableCommonBalance}" required="true" disabled="#{cc.attrs.editingDisable}">
 				<f:ajax event="blur" execute="@this"
 					render="atheneumCommonBalanceError percentAtheneumCommonBalance" />
@@ -59,7 +59,7 @@
 
 			<h:outputText value="#{msgs.shareTablePersonnel}:" />
 			<h:inputText id="personnel"
-				value="#{cc.attrs.bean.shareTableController.shareTable.personnel}"
+				value="#{cc.attrs.bean.shareTable.personnel}"
 				label="#{msgs.shareTablePersonnel}" required="true" disabled="#{cc.attrs.editingDisable}">
 				<f:ajax event="blur" execute="@this"
 					render="personnelError percentPersonnel" />
@@ -74,7 +74,7 @@
 
 			<h:outputText value="#{msgs.shareTableStructures}:" />
 			<h:inputText id="structures"
-				value="#{cc.attrs.bean.shareTableController.shareTable.structures}"
+				value="#{cc.attrs.bean.shareTable.structures}"
 				label="#{msgs.shareTableStructures}" required="true" disabled="#{cc.attrs.editingDisable}">
 				<f:ajax event="blur" execute="@this"
 					render="structuresError percentStructures" />
@@ -89,7 +89,7 @@
 
 			<h:outputText value="#{msgs.shareTableGoods}:" />
 			<h:inputText id="goodsAndServices"
-				value="#{cc.attrs.bean.shareTableController.shareTable.goodsAndServices}"
+				value="#{cc.attrs.bean.shareTable.goodsAndServices}"
 				label="#{msgs.shareTableGoods}" required="true" disabled="#{cc.attrs.editingDisable}">
 				<f:ajax event="blur" execute="@this"
 					render="goodsAndServicesError percentGoodsAndServices" />
@@ -104,7 +104,7 @@
 
 			<h:outputText value="#{msgs.shareTableTrip}:" />
 			<h:inputText id="businessTrip"
-				value="#{cc.attrs.bean.shareTableController.shareTable.businessTrip}"
+				value="#{cc.attrs.bean.shareTable.businessTrip}"
 				label="#{msgs.shareTableTrip}" required="true" disabled="#{cc.attrs.editingDisable}">
 				<f:ajax event="blur" execute="@this"
 					render="businessTripError percentBusinessTrip" />
@@ -119,7 +119,7 @@
 
 			<h:outputText value="#{msgs.shareTableConsMaterials}:" />
 			<h:inputText id="consumerMaterials"
-				value="#{cc.attrs.bean.shareTableController.shareTable.consumerMaterials}"
+				value="#{cc.attrs.bean.shareTable.consumerMaterials}"
 				label="#{msgs.shareTableConsMaterials}" required="true" disabled="#{cc.attrs.editingDisable}">
 				<f:ajax event="blur" execute="@this"
 					render="consumerMaterialsError percentConsumerMaterials" />
@@ -134,7 +134,7 @@
 
 			<h:outputText value="#{msgs.shareTableInvMaterials}:" />
 			<h:inputText id="inventoryMaterials"
-				value="#{cc.attrs.bean.shareTableController.shareTable.inventoryMaterials}"
+				value="#{cc.attrs.bean.shareTable.inventoryMaterials}"
 				label="#{msgs.shareTableInvMaterials}" required="true" disabled="#{cc.attrs.editingDisable}">
 				<f:ajax event="blur" execute="@this"
 					render="inventoryMaterialsError percentInventoryMaterials" />
@@ -149,7 +149,7 @@
 
 			<h:outputText value="#{msgs.shareTableRentals}:" />
 			<h:inputText id="rentals"
-				value="#{cc.attrs.bean.shareTableController.shareTable.rentals}"
+				value="#{cc.attrs.bean.shareTable.rentals}"
 				label="#{msgs.shareTableRentals}" required="true" disabled="#{cc.attrs.editingDisable}">
 				<f:ajax event="blur" execute="@this"
 					render="rentalsError percentRentals" />
@@ -164,7 +164,7 @@
 
 			<h:outputText value="#{msgs.shareTableContrPersonnel}:" />
 			<h:inputText id="personnelOnContract"
-				value="#{cc.attrs.bean.shareTableController.shareTable.personnelOnContract}"
+				value="#{cc.attrs.bean.shareTable.personnelOnContract}"
 				label="#{msgs.shareTableContrPersonnel}" required="true" disabled="#{cc.attrs.editingDisable}">
 				<f:ajax event="blur" execute="@this"
 					render="personnelOnContractError percentPersonnelOnContract" />
@@ -179,7 +179,7 @@
 
 			<h:outputText value="#{msgs.shareTableOtherCosts}:" />
 			<h:inputText id="otherCost"
-				value="#{cc.attrs.bean.shareTableController.shareTable.otherCost}"
+				value="#{cc.attrs.bean.shareTable.otherCost}"
 				label="#{msgs.shareTableOtherCosts}" required="true" disabled="#{cc.attrs.editingDisable}">
 				<f:ajax event="blur" execute="@this"
 					render="otherCostError percentOtherCost" />
@@ -193,16 +193,16 @@
 			<h:message for="otherCost" id="otherCostError" />
 
 			<h:inputHidden value="needed" id="percentsCheck"
-				validator="#{cc.attrs.bean.shareTableController.validate}" />
+				validator="#{cc.attrs.bean.validate}" />
 			<h:message styleClass="errorMessage" for="percentsCheck" />
 
 		</h:panelGrid>
 	</p:panel>
 
 	<p:dataTable id="personnelShares"
-		value="#{cc.attrs.bean.shareTableController.shares}" var="share"
+		value="#{cc.attrs.bean.shares}" var="share"
 		selectionMode="single"
-		selection="#{cc.attrs.bean.shareTableController.selectedShare}"
+		selection="#{cc.attrs.bean.selectedShare}"
 		rowKey="#{share}">
 
 		<f:facet name="header">
