--- a/Jama/src/main/webapp/prova.xhtml
+++ b/Jama/src/main/webapp/prova.xhtml
@@ -8,39 +8,43 @@
 
 
 <h:head>
-	<h:outputStylesheet name="installmentWiz.css" library="css" />
+	<h:outputStylesheet name="agreementWiz.css" library="css" />
 </h:head>
 
 <h:body>
 
 	<h:panelGrid width="100%" columns="2" columnClasses="col1">
-		<h:form id="installmentWiz">
+		<h:form id="agreementWiz">
 
 			<p:growl id="growl" sticky="true" showDetail="true" />
 			<input type="hidden" name="cid"
 				value='#{agreementManager.conversation.id}' />
 
-			<p:wizard>
+			<p:tabView>
 
-				<ui:include src="/resources/sections/installmentWizData.xhtml" />
+			<p:tab id="tabDati" title="Dati">
+					<sections:agreementWizData editingDisable="true" />
 
-					<p:tab id="tabRip" title="Passo 2">
-					<sections:wizShareTable editingDisable="false"
-						bean="#{installmentShareTablePCB}" />
+				</p:tab>
+				<ui:include src="/resources/sections/agreementWizData.xhtml" />
+
+				<p:tab id="tabRip" title="Passo 2">
+					<sections:wizShareTable editingDisable="true"
+						bean="#{agreementShareTablePCB}" />
 				</p:tab>
 
-				<ui:include src="/resources/sections/installmentLastStep.xhtml" />
+				<ui:include src="/resources/sections/agreementWizAttachments.xhtml" />
+
+			</p:tabView>
+
+			<h:commandButton value="#{msgs.cancel}"
+				action="#{agreementManager.cancel()}" immediate="true" />
 
 
 
-			</p:wizard>
-
-			<h:commandButton value="#{msgs.cancel}" action="#{installmentManager.cancel()}" immediate="true"
-				ajax="false" />
 
 		</h:form>
 	</h:panelGrid>
 
-	<br />
 </h:body>
 </html>
