--- a/Jama/src/main/webapp/resources/sections/agreementInstallmentsList.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementInstallmentsList.xhtml
@@ -3,14 +3,15 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui"
-	xmlns:composite="http://java.sun.com/jsf/composite">
+	xmlns:composite="http://java.sun.com/jsf/composite"
+	xmlns:sections="http://java.sun.com/jsf/composite/sections">
 
 <composite:interface>
 	<composite:attribute name="editingDisable"></composite:attribute>
 
 </composite:interface>
 
-<composite:implementation>
+<composite:implementation xmlns:sections="http://java.sun.com/jsf/composite/sections">
 
 
 
@@ -31,10 +32,12 @@
 			<p:row>
 
 				<p:column>
-
+					
+		
 					<h:commandButton action="#{installmentManager.addInstallment()}"
-						value="Aggiungi una rata">
+						value="Aggiungi una rata" ajax="false" immediate="true">
 					</h:commandButton>
+				
 
 				</p:column>
 
