--- a/Jama/src/main/webapp/resources/sections/agreementWizAttachments.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementWizAttachments.xhtml
@@ -1,9 +1,9 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" 
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
-    xmlns:h="http://java.sun.com/jsf/html" 
-    xmlns:f="http://java.sun.com/jsf/core"
-    xmlns:p="http://primefaces.org/ui">
-    
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:p="http://primefaces.org/ui">
+
 	<p:tab id="tabEnd" title="Passo 3">
 		<p:panel header="Empty">
 
@@ -16,9 +16,11 @@
 				<br />
 
 			</h:panelGrid>
-			
-			<p:commandButton value="#{msgs.save}" action="#{agreementWizardPCB.save()}" ajax="false"/>
-			
+
+			<p:commandButton value="#{msgs.save}"
+				action="#{agreementWizardPCB.save()}"
+				actionListener="#{agreementShareTablePCB.toUpdate()}" ajax="false" />
+
 
 
 		</p:panel>
