--- a/Jama/src/main/webapp/resources/sections/wizShareTable.xhtml
+++ b/Jama/src/main/webapp/resources/sections/wizShareTable.xhtml
@@ -8,25 +8,27 @@
 <composite:interface>
 	<composite:attribute name="bean"></composite:attribute>
 	<composite:attribute name="editingDisable"></composite:attribute>
-	
+
 
 
 </composite:interface>
 
-<composite:implementation >
+<composite:implementation>
 
 
 
 	<p:panel header="Tabella di ripartizione">
 
-		<h:panelGrid columns="4" columnClasses="label, value, percents, errorMessage"
+		<h:panelGrid columns="4"
+			columnClasses="label, value, percents, errorMessage"
 			styleClass="grid">
 
 
 			<h:outputText value="#{msgs.shareTableCapitalBalance}:" />
 			<h:inputText id="atheneumCapitalBalance"
 				value="#{cc.attrs.bean.shareTable.atheneumCapitalBalance}"
-				label="#{msgs.shareTableCapitalBalance}" required="true" disabled="#{cc.attrs.editingDisable}">
+				label="#{msgs.shareTableCapitalBalance}" required="true"
+				disabled="#{cc.attrs.editingDisable}">
 				<f:ajax event="blur" execute="@this"
 					render="atheneumCapitalBalanceError  percentAtheneumCapitalBalance" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
@@ -44,7 +46,8 @@
 			<h:outputText value="#{msgs.shareTableCommonBalance}:" />
 			<h:inputText id="atheneumCommonBalance"
 				value="#{cc.attrs.bean.shareTable.atheneumCommonBalance}"
-				label="#{msgs.shareTableCommonBalance}" required="true" disabled="#{cc.attrs.editingDisable}">
+				label="#{msgs.shareTableCommonBalance}" required="true"
+				disabled="#{cc.attrs.editingDisable}">
 				<f:ajax event="blur" execute="@this"
 					render="atheneumCommonBalanceError percentAtheneumCommonBalance" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
@@ -60,7 +63,8 @@
 			<h:outputText value="#{msgs.shareTablePersonnel}:" />
 			<h:inputText id="personnel"
 				value="#{cc.attrs.bean.shareTable.personnel}"
-				label="#{msgs.shareTablePersonnel}" required="true" disabled="#{cc.attrs.editingDisable}">
+				label="#{msgs.shareTablePersonnel}" required="true"
+				disabled="#{cc.attrs.editingDisable}">
 				<f:ajax event="blur" execute="@this"
 					render="personnelError percentPersonnel" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
@@ -75,7 +79,8 @@
 			<h:outputText value="#{msgs.shareTableStructures}:" />
 			<h:inputText id="structures"
 				value="#{cc.attrs.bean.shareTable.structures}"
-				label="#{msgs.shareTableStructures}" required="true" disabled="#{cc.attrs.editingDisable}">
+				label="#{msgs.shareTableStructures}" required="true"
+				disabled="#{cc.attrs.editingDisable}">
 				<f:ajax event="blur" execute="@this"
 					render="structuresError percentStructures" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
@@ -90,7 +95,8 @@
 			<h:outputText value="#{msgs.shareTableGoods}:" />
 			<h:inputText id="goodsAndServices"
 				value="#{cc.attrs.bean.shareTable.goodsAndServices}"
-				label="#{msgs.shareTableGoods}" required="true" disabled="#{cc.attrs.editingDisable}">
+				label="#{msgs.shareTableGoods}" required="true"
+				disabled="#{cc.attrs.editingDisable}">
 				<f:ajax event="blur" execute="@this"
 					render="goodsAndServicesError percentGoodsAndServices" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
@@ -105,7 +111,8 @@
 			<h:outputText value="#{msgs.shareTableTrip}:" />
 			<h:inputText id="businessTrip"
 				value="#{cc.attrs.bean.shareTable.businessTrip}"
-				label="#{msgs.shareTableTrip}" required="true" disabled="#{cc.attrs.editingDisable}">
+				label="#{msgs.shareTableTrip}" required="true"
+				disabled="#{cc.attrs.editingDisable}">
 				<f:ajax event="blur" execute="@this"
 					render="businessTripError percentBusinessTrip" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
@@ -120,7 +127,8 @@
 			<h:outputText value="#{msgs.shareTableConsMaterials}:" />
 			<h:inputText id="consumerMaterials"
 				value="#{cc.attrs.bean.shareTable.consumerMaterials}"
-				label="#{msgs.shareTableConsMaterials}" required="true" disabled="#{cc.attrs.editingDisable}">
+				label="#{msgs.shareTableConsMaterials}" required="true"
+				disabled="#{cc.attrs.editingDisable}">
 				<f:ajax event="blur" execute="@this"
 					render="consumerMaterialsError percentConsumerMaterials" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
@@ -135,7 +143,8 @@
 			<h:outputText value="#{msgs.shareTableInvMaterials}:" />
 			<h:inputText id="inventoryMaterials"
 				value="#{cc.attrs.bean.shareTable.inventoryMaterials}"
-				label="#{msgs.shareTableInvMaterials}" required="true" disabled="#{cc.attrs.editingDisable}">
+				label="#{msgs.shareTableInvMaterials}" required="true"
+				disabled="#{cc.attrs.editingDisable}">
 				<f:ajax event="blur" execute="@this"
 					render="inventoryMaterialsError percentInventoryMaterials" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
@@ -148,9 +157,9 @@
 			<h:message for="inventoryMaterials" id="inventoryMaterialsError" />
 
 			<h:outputText value="#{msgs.shareTableRentals}:" />
-			<h:inputText id="rentals"
-				value="#{cc.attrs.bean.shareTable.rentals}"
-				label="#{msgs.shareTableRentals}" required="true" disabled="#{cc.attrs.editingDisable}">
+			<h:inputText id="rentals" value="#{cc.attrs.bean.shareTable.rentals}"
+				label="#{msgs.shareTableRentals}" required="true"
+				disabled="#{cc.attrs.editingDisable}">
 				<f:ajax event="blur" execute="@this"
 					render="rentalsError percentRentals" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
@@ -165,7 +174,8 @@
 			<h:outputText value="#{msgs.shareTableContrPersonnel}:" />
 			<h:inputText id="personnelOnContract"
 				value="#{cc.attrs.bean.shareTable.personnelOnContract}"
-				label="#{msgs.shareTableContrPersonnel}" required="true" disabled="#{cc.attrs.editingDisable}">
+				label="#{msgs.shareTableContrPersonnel}" required="true"
+				disabled="#{cc.attrs.editingDisable}">
 				<f:ajax event="blur" execute="@this"
 					render="personnelOnContractError percentPersonnelOnContract" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
@@ -180,7 +190,8 @@
 			<h:outputText value="#{msgs.shareTableOtherCosts}:" />
 			<h:inputText id="otherCost"
 				value="#{cc.attrs.bean.shareTable.otherCost}"
-				label="#{msgs.shareTableOtherCosts}" required="true" disabled="#{cc.attrs.editingDisable}">
+				label="#{msgs.shareTableOtherCosts}" required="true"
+				disabled="#{cc.attrs.editingDisable}">
 				<f:ajax event="blur" execute="@this"
 					render="otherCostError percentOtherCost" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
@@ -199,11 +210,9 @@
 		</h:panelGrid>
 	</p:panel>
 
-	<p:dataTable id="personnelShares"
-		value="#{cc.attrs.bean.shares}" var="share"
-		selectionMode="single"
-		selection="#{cc.attrs.bean.selectedShare}"
-		rowKey="#{share}">
+	<p:dataTable id="personnelShares" value="#{cc.attrs.bean.shares}"
+		var="share" selectionMode="single"
+		selection="#{cc.attrs.bean.selectedShare}" rowKey="#{share}">
 
 		<f:facet name="header">
 				#{msgs.shareTablePersonnel}
@@ -215,7 +224,8 @@
 				</f:facet>
 
 			<p:selectOneMenu id="chiefMenu" value="#{share.chiefScientist}"
-				label="#{msgs.chief}" filter="true" filterMatchMode="contains" disabled="#{cc.attrs.editingDisable}">
+				label="#{msgs.chief}" filter="true" filterMatchMode="contains"
+				disabled="#{cc.attrs.editingDisable}" onchange="#{agreementShareTablePCB.notToUpdate()}">
 				<f:selectItem itemLabel="Selezionare" itemValue="#{null}" />
 				<f:selectItems value="#{utilPB.chiefItems}" />
 				<f:converter binding="#{chiefConverterPersonnelShare}" />
@@ -224,11 +234,13 @@
 
 			<f:facet name="footer">
 				<p:commandButton value="#{msgs.add}"
-					action="#{cc.attrs.bean.addRow()}"
-					update="personnelShares" process="personnelShares, @this" rendered="#{!cc.attrs.editingDisable}" />
+					action="#{cc.attrs.bean.addRow()}" update="personnelShares"
+					process="personnelShares, @this"
+					rendered="#{!cc.attrs.editingDisable}" />
 				<p:commandButton value="#{msgs.remove}"
-					action="#{cc.attrs.bean.removeRow()}"
-					update="personnelShares" process="personnelShares, @this" rendered="#{!cc.attrs.editingDisable}" />
+					action="#{cc.attrs.bean.removeRow()}" update="personnelShares"
+					process="personnelShares, @this"
+					rendered="#{!cc.attrs.editingDisable}" />
 			</f:facet>
 		</p:column>
 
