verso la validazione delle rate

--- a/Jama/src/main/webapp/resources/sections/agreementInstallmentsList.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementInstallmentsList.xhtml
@@ -27,7 +27,7 @@
 		</p:column>
 		
 		<p:column headerText="#{msgs.amount}">
-			<h:outputText value="#{installment.amount}" />
+			<h:outputText value="#{installment.wholeAmount}" />
 		
 		</p:column>
 		
