--- a/Jama/src/main/webapp/agreementList.xhtml
+++ b/Jama/src/main/webapp/agreementList.xhtml
@@ -1,9 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:p="http://primefaces.org/ui">
 
 <h:head>
 	<h:outputStylesheet name="home.css" library="css" />
@@ -48,43 +45,32 @@
 		
 	</script>
 </h:head>
-<h:body
-	onload="setFilters(#{agreementListPCB.lazyModel.filterChiefId}, #{agreementListPCB.lazyModel.filterCompanyId});">
+<h:body onload="setFilters(#{agreementListPCB.lazyModel.filterChiefId}, #{agreementListPCB.lazyModel.filterCompanyId});">
 
 	<h:form prependId="false">
-		<input type="hidden" name="cid"
-			value='#{agreementListPCB.conversation.id}' />
+		<input type="hidden" name="cid" value='#{agreementListPCB.conversation.id}' />
 
-		<p:contextMenu id="tableContextMenu" widgetVar="w_tableContextMenu"
-			for="agreementTable">
-			<p:menuitem value="#{msgs.view}" icon="ui-icon-search"
-				actionListener="#{agreementListPCB.viewAgreement()}" />
-			<p:menuitem value="#{msgs.edit}" icon="ui-icon-wrench"
-				action="#{agreementListPCB.editAgreement()}" />
-			<p:menuitem value="#{msgs.remove}" icon="ui-icon-trash"
-				action="#{agreementListPCB.deleteAgreement()}" />
+		<p:contextMenu id="tableContextMenu" widgetVar="w_tableContextMenu" for="agreementTable">
+			<p:menuitem value="#{msgs.view}" icon="ui-icon-search" actionListener="#{agreementListPCB.viewAgreement()}" />
+			<p:menuitem value="#{msgs.edit}" icon="ui-icon-wrench" action="#{agreementListPCB.editAgreement()}" />
+			<p:menuitem value="#{msgs.remove}" icon="ui-icon-trash" action="#{agreementListPCB.deleteAgreement()}" />
 		</p:contextMenu>
 
-		<p:dataTable id="agreementTable" var="agr" widgetVar="w_agrTable"
-			lazy="true" value="#{agreementListPCB.lazyModel}"
-			emptyMessage="#{msgs.noAgrFound}" paginator="true" rows="10"
-			rowsPerPageTemplate="5,10,15"
-			paginatorTemplate="{RowsPerPageDropdown} {PreviousPageLink} {NextPageLink}"
-			selection="#{agreementListPCB.lazyModel.selectedValue}" selectionMode="single"
-			rowKey="#{agr.id}" sortOrder="descending">
+		<p:dataTable id="agreementTable" var="agr" widgetVar="w_agrTable" lazy="true" value="#{agreementListPCB.lazyModel}"
+			emptyMessage="#{msgs.noAgrFound}" paginator="true" rows="10" rowsPerPageTemplate="5,10,15"
+			paginatorTemplate="{RowsPerPageDropdown} {PreviousPageLink} {NextPageLink}" selection="#{agreementListPCB.lazyModel.selectedValue}"
+			selectionMode="single" rowKey="#{agr.id}" sortOrder="descending">
 
 			<p:ajax event="filter" oncomplete="setRowEvent();" />
 			<p:ajax event="sort" oncomplete="setRowEvent();" />
 			<p:ajax event="page" oncomplete="setRowEvent();" />
 
-			<p:column id="agrTableChiefColumn" filterBy="#{agr.chief.id}"
-				headerText="#{msgs.chief}" filterMatchMode="exact"
+			<p:column id="agrTableChiefColumn" filterBy="#{agr.chief.id}" headerText="#{msgs.chief}" filterMatchMode="exact"
 				filterOptions="#{utilPB.filterChiefItems}">
 				<h:outputText value="#{agr.chief.completeName}" />
 			</p:column>
 
-			<p:column id="agrTableCompanyColumn" filterBy="#{agr.company.id}"
-				headerText="#{msgs.company}" filterMatchMode="exact"
+			<p:column id="agrTableCompanyColumn" filterBy="#{agr.company.id}" headerText="#{msgs.company}" filterMatchMode="exact"
 				filterOptions="#{utilPB.filterCompanyItems}">
 				<h:outputText value="#{agr.company.name}" />
 			</p:column>
@@ -94,25 +80,17 @@
 	                	#{msgs.approvalDate}  
 					<h:form id="calendarFilters">
 						<div style="display: block; width: 90%; margin: auto;">
-							<p:calendar id="firstDate" styleClass="calendarFilter"
-								widgetVar="w_firstDate"
-								value="#{agreementListPCB.lazyModel.filterMinDate}"
-								pattern="dd/MM/yyyy" readonlyInput="true" showOn="both"
-								showOtherMonths="true">
+							<p:calendar id="firstDate" styleClass="calendarFilter" widgetVar="w_firstDate" value="#{agreementListPCB.lazyModel.filterMinDate}"
+								pattern="dd/MM/yyyy" readonlyInput="true" showOn="both" showOtherMonths="true">
 							</p:calendar>
 							-
-							<p:calendar id="lastDate" styleClass="calendarFilter"
-								widgetVar="w_lastDate"
-								value="#{agreementListPCB.lazyModel.filterMaxDate}"
-								pattern="dd/MM/yyyy" readonlyInput="true" showOn="both"
-								showOtherMonths="true">
+							<p:calendar id="lastDate" styleClass="calendarFilter" widgetVar="w_lastDate" value="#{agreementListPCB.lazyModel.filterMaxDate}"
+								pattern="dd/MM/yyyy" readonlyInput="true" showOn="both" showOtherMonths="true">
 							</p:calendar>
 						</div>
-						<p:commandButton id="calendarFilterBtn"
-							styleClass="filter-buttons" value="#{msgs.filter}"
+						<p:commandButton id="calendarFilterBtn" styleClass="filter-buttons" value="#{msgs.filter}"
 							onclick="return calendarFilter(arguments[0], w_agrTable);" />
-						<p:commandButton id="calendarResetBtn" styleClass="filter-buttons"
-							value="#{msgs.reset}"
+						<p:commandButton id="calendarResetBtn" styleClass="filter-buttons" value="#{msgs.reset}"
 							onclick="return calendarReset(arguments[0], w_firstDate, w_lastDate, w_agrTable);" />
 					</h:form>
 				</f:facet>
@@ -121,30 +99,34 @@
 					<f:convertDateTime locale="it" dateStyle="full" />
 				</h:outputText>
 
-				<p:commandButton styleClass="agr-list-button" icon="ui-icon-search"
-					action="#{agreementListPCB.viewAgreement()}">
-					<f:setPropertyActionListener value="#{agr}"
-						target="#{agreementListPCB.lazyModel.selectedValue}" />
+				<p:commandButton styleClass="agr-list-button" icon="ui-icon-search" action="#{agreementListPCB.viewAgreement()}">
+					<f:setPropertyActionListener value="#{agr}" target="#{agreementListPCB.lazyModel.selectedValue}" />
 				</p:commandButton>
-				<p:commandButton styleClass="agr-list-button" icon="ui-icon-wrench"
-					action="#{agreementListPCB.editAgreement()}">
-					<f:setPropertyActionListener value="#{agr}"
-						target="#{agreementListPCB.lazyModel.selectedValue}" />
+				<p:commandButton styleClass="agr-list-button" icon="ui-icon-wrench" action="#{agreementListPCB.editAgreement()}">
+					<f:setPropertyActionListener value="#{agr}" target="#{agreementListPCB.lazyModel.selectedValue}" />
 				</p:commandButton>
-				<p:commandButton styleClass="agr-list-button" icon="ui-icon-trash"
-					action="#{agreementListPCB.deleteAgreement()}"
-					update="agreementTable">
-					<f:setPropertyActionListener value="#{agr}"
-						target="#{agreementListPCB.lazyModel.selectedValue}" />
+
+				<ui:remove>
+					<p:commandButton styleClass="agr-list-button" icon="ui-icon-trash" action="#{agreementListPCB.deleteAgreement()}" update="agreementTable"
+						oncomplete="setRowEvent();">
+						<f:setPropertyActionListener value="#{agr}" target="#{agreementListPCB.lazyModel.selectedValue}" />
+					</p:commandButton>
+				</ui:remove>
+				<p:commandButton styleClass="agr-list-button" icon="ui-icon-trash" oncomplete="w_confirm.show();">
+					<f:setPropertyActionListener value="#{agr}" target="#{agreementListPCB.lazyModel.selectedValue}" />
 				</p:commandButton>
 
 			</p:column>
 
 		</p:dataTable>
 
+		<p:confirmDialog message="#{msgs.sure}" header="#{msgs.remove}" severity="alert" widgetVar="w_confirm">
+			<p:commandButton value="#{msgs.yes}" action="#{agreementListPCB.deleteAgreement()}" immediate="true" update="agreementTable"
+				oncomplete="w_confirm.hide(); setRowEvent();" />
+			<p:commandButton value="#{msgs.no}" onclick="w_confirm.hide();" type="button" />
+		</p:confirmDialog>
 
-		<h:commandButton action="#{agreementListPCB.backToHome()}" value="Home"
-			immediate="true" />
+		<h:commandButton action="#{agreementListPCB.backToHome()}" value="Home" immediate="true" />
 
 	</h:form>
 
