un pomeriggio buttato

--- a/Jama/src/main/webapp/agreementList.xhtml
+++ b/Jama/src/main/webapp/agreementList.xhtml
@@ -4,6 +4,7 @@
 
 <h:head>
 	<h:outputStylesheet name="home.css" library="css" />
+	<h:outputStylesheet name="table.css" library="css" />
 
 	<script type="text/javascript">
 		function setRowEvent(){
